--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Pyramid Climber</title>
+  <title>Platformer</title>
   <style>
     canvas {
       width: 1000px;
