Added Favicon. Reverted back to 'Codey' character as player.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="shortcut icon" type="image/x-icon" href="purple_jewel.png"/>
   <title>Run (2) The Jewels</title>
   <style>
     canvas {
@@ -16,7 +17,7 @@
 <body>
   <h1 class="game_title">Run (2) The Jewels</h1>
   <h2 class="instructions">Arrow Keys to move. Spacebar to jump</h2>
-  <h3 class="description">You're a little flea in a big world! Guide your very tiny character to the treasure at the end of the screen!</h3>
+  <h3 class="description">Guide your tiny character to the treasure at the end of the screen!</h3>
   <div class="game_screen">
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.2/dist/phaser.js"></script>
     <script defer src="game.js"></script>
